# helium

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-matrix.yml
crates/helium-common/: Cargo.toml
crates/helium-core/: Cargo.toml
crates/helium-core/src/: app.rs  gpu.rs  lib.rs  plotter.rs  shader.wgsl  state.rs
crates/helium-graphics/: Cargo.toml
crates/helium-graphics/src/: frame.rs  gpu.rs  lib.rs  plotter.rs
mobile/: .gitignore
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/dev/helium/viewer/: MainActivity.kt
mobile/android/app/src/main/res/layout/: activity_main.xml
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
mobile/ios/: project.yml
mobile/ios/Helium/: ContentView.swift  Helium-Bridging-Header.h  HeliumApp.swift  Info.plist  main.m
mobile/ios/include/: helium.h
mobile/macos/: .gitignore  project.yml
mobile/macos/Helium/: Helium.icns  Info.plist  main.m
mobile/macos/include/: helium.h
scripts/mobile/: build-android-libs.sh  build-ios-xcframework.sh  build-macos-xcframework.sh  generate-ios-icons.sh  generate-ios-project.sh  generate-macos-icon.sh  generate-macos-project.sh  package-macos-app.sh
src/: cli.rs  lib.rs  main.rs
