[workspace]
resolver = "3"
members = ["crates/*", "."]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytemuck = "1.25.0"
clap = "4.5.60"
ctrlc = { version = "3.5.2", features = ["termination"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
glam = "0.32.0"
helium-common = { version = "0.1.0", path = "crates/helium-common" }
helium-core = { version = "0.1.0", path = "crates/helium-core" }
ndarray = "0.17.2"
pollster = "0.4.0"
rustfft = "6.4.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wgpu = "27.0.1"
winit = "0.30.12"

[package]
name = "helium"
version = "0.1.0"
edition.workspace = true
description = """
A GPU-accelerated math object viewer built in Rust.
"""

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
helium-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
