[workspace]
resolver = "3"
members = ["crates/*", "."]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytemuck = "1.25.0"
clap = "4.6.0"
ctrlc = { version = "3.5.2", features = ["termination"] }
egui = "0.34.1"
egui-wgpu = "0.34.1"
egui-winit = "0.34.1"
fibr = { version = "0.1.0", path = "../fibr" }
glam = "0.32.1"
helium-common = { version = "0.1.0", path = "crates/helium-common" }
helium-core = { version = "0.1.0", path = "crates/helium-core" }
helium-graphics = { version = "0.1.0", path = "crates/helium-graphics" }
ndarray = "0.17.2"
pollster = "0.4.0"
rustfft = "6.4.1"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = "29.0.1"
winit = { version = "0.30.13", features = ["android-native-activity"] }

[package]
name = "helium"
version = "0.1.0"
edition.workspace = true
description = """
A GPU-accelerated math object viewer built in Rust.
"""

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
anyhow.workspace = true
helium-core.workspace = true
winit.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
clap.workspace = true
ctrlc.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
